objects/RenewalStaging__c.object
<CustomObject>
    <description>SFDC-3186 Staging object to store details of opportunities for which Renewal opps should be created automatically.</description>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <description>SFDC-3186 Provides details of error in renewal creation</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if there was an error in renewal creation</description>
        <label>Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExceptionDescription__c</fullName>
        <description>SFDC-3186 Gives details on why the opp is invalid/exception for renewal</description>
        <label>Exception Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if opp is invalid/exception for renewal opp creation.</description>
        <label>Exception?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasMixedProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if an opp has products from both Fincancial and non-Financial Svcs Global Segment.</description>
        <label>Has Mixed Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNoSubscriptionProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if an opp to be renewed has no subscription products.</description>
        <label>Has No Subscription Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNoTranConsProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3925 Represents if an opp to be renewed has no transaction/consulting products.</description>
        <label>Has No Trans/Cons Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNonBillableEvergreenContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3372 Represents if an opp has a contract with Renewal Term as Evergreen and Billing Frequency as Non-Billable</description>
        <label>Has Non-Billable Evergreen Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOneTimeContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if the opp has one-time contract</description>
        <label>Has One-Time Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppId__c</fullName>
        <description>SFDC-3186 To store opp Id text. If opp gets deleted, this text field will conserve data in staging for reconciliation.</description>
        <externalId>true</externalId>
        <label>Opp Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityContactRoleSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents there was no error in creating child opportunity cpntact role records for new renewal opp.</description>
        <label>Opportunity Contact Role Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if the owner is inactive for opportunity to be renewed.</description>
        <label>Opportunity Owner Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityProductSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if there was no error in creating child opportunity product records for new renewal opp.</description>
        <label>Opportunity Product Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunitySplitSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if there was no error in creating child opportunity split records for new renewal opp.</description>
        <label>Opportunity Split Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityTeamSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if there was no error in creating child opportunity team member records for new renewal opp.</description>
        <label>Opportunity Team Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents that there was no error in creating renewal opp record for the given master opp in staging record.</description>
        <label>Opportunity Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC-3186 Opportunity record to validate for renewals creation</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewals Staging</relationshipLabel>
        <relationshipName>RenewalsStaging</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if the staging record is processed by renewals batch or not.</description>
        <label>Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalPreexists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if a renewal opp pre-exists for a given opp.</description>
        <label>Renewal Pre-exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if complete batch ran successfully and all records in object hierarchy were created successfully for this staging record opp.</description>
        <label>Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasNoValidConsultingProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3925 Represents if an opp to be renewed has no transaction/consulting/Subs products.</description>
        <label>Has No Valid Consulting Products?</label>
        <type>Checkbox</type>
    </fields>
    <label>Renewal Staging</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Renewal Staging #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewals Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>